Bug 1470947 - Part 1: Remove visible tab indicator from all tabs menu r=dao
MozReview-Commit-ID: CliduvaGqUb

UltraBlame original commit: 618784ce43c7f4ada2186c9ac225a0d60ee5d4b6

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -6763,55 +6763,23 @@ all
 -
 tabs
 -
-item
-[
-tabIsVisible
-]
-{
-box
--
-shadow
-:
-inset
--
-4px
-0
-ThreeDShadow
-;
-}
+button
 .
 all
 -
 tabs
 -
-item
-[
-selected
-]
-[
-tabIsVisible
-]
+secondary
+-
+button
 {
-box
+background
 -
-shadow
+color
 :
-inset
--
-4px
-0
-ThreeDShadow
-inset
-4px
-0
-var
-(
--
--
-blue
--
-40
-)
+transparent
+!
+important
 ;
 }
 .
